12_playground/alchemy/actinium/deploy/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actinium
  labels:
    project: alchemy
    app: actinium
  annotations:
    maintainer: "felix@roskenet.de"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: actinium.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actinium
                port:
                  name: http
